fixed spacing of Space Stuff

--- a/less/index.less
+++ b/less/index.less
@@ -65,7 +65,8 @@
         list-style-type: none;
         li{
             border: 1px solid @accent-color;
-            line-height: 4;
+            line-height: 3;
+            padding-left: 1rem;
         }
     }
 }
